# rust-taproot-playground

./: .env  .env.example  Cargo.toml  README.md  testing.db
src/: bitcoin_utils.rs  main.rs
