[package]
name = "rust-taproot-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bdk = { version = "0.29.0", features = ["sqlite"] }
bitcoin = { version = "0.32.0", features = ["rand-std"] }
dotenv = "0.15.0"

[profile.release]
lto = true
strip = true
