[package]
name = "rust-taproot-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
bdk = { version = "0.29.0", features = ["sqlite"] }
bitcoin = { version = "0.32.0", features = ["rand-std"] }
dotenv = "0.15.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
lto = true
strip = true
